--- a/CodInActSum/CodInActSum/Info.plist
+++ b/CodInActSum/CodInActSum/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>/Users/markuslu/Documents/GitHub/CodInActSum/CodInActSum/CodInActSum/ProjectFonts/dimitri.TTF</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -9,9 +13,5 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>ProjectFonts/dimitri.TTF</string>
-	</array>
 </dict>
 </plist>
